fix too much distance between text and icon

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -49,7 +49,7 @@
 #new > ul > li {
 	height: 36px;
 	margin: 5px;
-	padding-left: 48px;
+	padding-left: 42px;
 	padding-bottom: 2px;
 	background-position: initial;
 	cursor: pointer;
